
2013-01-16  WooHyun Jung

        * elm_plug should call elm_widget_can_focus_set after adding parent class.
        * Now, widget itself is the object which gets mouse_up event for stealing focus from another object. By this change, a widget with scroller interface can change its focus state before mouse_up of hit_rect.

2013-01-16  Jaeun Choi

        * Fix bug where index is not re-filled if autohide disabled

2013-01-16  ChunEon Park (Hermet)

        * allocate conformant part dummy objects only when the swallow parts are existed actually. since these parts are really dependent on the platform, in most case they don't need all parts at the same time.

2013-01-16  Daniel Juyung Seo (SeoZ)

        * Fix thumb theme hook.

2013-01-17  Bora Hwang (bora1.hwang@samsung.com)

        * when parent of ctxpopup is resized, ctxpopup calls dismissed signal

2013-01-18  Thiep Ha (thiep.ha@samsung.com)

        * Fix memory leak of the ctxpopup and callback function to be a ctxpoup obj is delivered to.

2013-01-19  WooHyun Jung

        * When string in entry is changed, access to sd should be forbidden after smart_callback_call is called.

2013-01-22  ChunEon Park (Hermet)

        * apply display mode to all views of a naviframe if the display mode of the views are changed.

2013-01-22  Daniel Juyung Seo (SeoZ)

        * Enhanced diskselector add and item_append time.

2013-01-23  WooHyun Jung

        * In _timer_cb of elm_notify, access to sd should be forbidden after smart_callback_call is called.

2013-01-26  ChanWook Jung (jchanwook@gmail.com)

        * Expand elm_transit tween_mode and add twee_mode_factor_set(),get() APIs

2013-01-26  WooHyun Jung

        * A widget which doesn't have focus_region_get should give its width and height for correct focus_region_show.

2013-01-26  Daniel Juyung Seo (SeoZ)

        * Add elm_index_delay_change_time_set/get for changing delay change time in index.